# rust_cmake_template

./: .gitignore  CMakeLists.txt  README.md
rust_lib/: Cargo.toml  cbindgen.toml
rust_lib/src/: lib.rs
scripts/: build.sh
src/: main.cpp
